<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_dialog_card"
    android:padding="@dimen/space_xl">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goal_dialog_title"
        android:textAppearance="@style/TextAppearance.FitTrack.Title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_xs"
        android:text="@string/goal_dialog_subtitle"
        android:textAppearance="@style/TextAppearance.FitTrack.Caption" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/space_xl">

        <TextView
            android:id="@+id/preset5k"
            style="@style/GoalChip"
            android:text="@string/goal_preset_5k" />

        <TextView
            android:id="@+id/preset8k"
            style="@style/GoalChip"
            android:layout_marginStart="@dimen/space_sm"
            android:text="@string/goal_preset_8k" />

        <TextView
            android:id="@+id/preset10k"
            style="@style/GoalChip"
            android:layout_marginStart="@dimen/space_sm"
            android:text="@string/goal_preset_10k" />

        <TextView
            android:id="@+id/preset15k"
            style="@style/GoalChip"
            android:layout_marginStart="@dimen/space_sm"
            android:text="@string/goal_preset_15k" />

    </LinearLayout>

    <EditText
        android:id="@+id/customGoalInput"
        style="@style/Widget.FitTrack.Input"
        android:layout_marginTop="@dimen/space_lg"
        android:hint="@string/goal_custom_hint"
        android:inputType="number"
        android:maxLines="1"
        android:importantForAutofill="no" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/space_xl">

        <TextView
            android:id="@+id/cancelBtn"
            style="@style/Widget.FitTrack.Button.Secondary"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/action_cancel"
            android:textColor="@color/text_secondary" />

        <TextView
            android:id="@+id/saveBtn"
            style="@style/Widget.FitTrack.Button.Primary"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/space_md"
            android:text="@string/action_save_goal" />

    </LinearLayout>

</LinearLayout>
